fix math formula overflow

--- a/themes/hugo-lithium/static/css/main.css
+++ b/themes/hugo-lithium/static/css/main.css
@@ -34,8 +34,10 @@ p img {
   width: 100%
 }
 
-div.dataTables_wrapper {
+div.dataTables_wrapper,
+span.mjx-chtml.MJXc-display {
   overflow-x: auto;
+  overflow-y: hidden;
 }
 
 .wrapper {
